@@ -9,7 +9,8 @@ import com.linkedin.common.Ownership;
 import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.metadata.aspect.patch.template.ArrayMergingTemplate;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import javax.annotation.Nonnull;
 
 public class OwnershipTemplate implements ArrayMergingTemplate<Ownership> {
@@ -53,7 +54,9 @@ public class OwnershipTemplate implements ArrayMergingTemplate<Ownership> {
     return arrayFieldToMap(
         baseNode,
         OWNERS_FIELD_NAME,
-        List.of(OWNER_FIELD_NAME, TYPE_FIELD_NAME, TYPE_URN_FIELD_NAME, ATTRIBUTION_SOURCE));
+        Collections.unmodifiableList(
+            Arrays.asList(
+                OWNER_FIELD_NAME, TYPE_FIELD_NAME, TYPE_URN_FIELD_NAME, ATTRIBUTION_SOURCE)));
   }
 
   @Nonnull
@@ -62,6 +65,8 @@ public class OwnershipTemplate implements ArrayMergingTemplate<Ownership> {
     return transformedMapToArray(
         patched,
         OWNERS_FIELD_NAME,
-        List.of(OWNER_FIELD_NAME, TYPE_FIELD_NAME, TYPE_URN_FIELD_NAME, ATTRIBUTION_SOURCE));
+        Collections.unmodifiableList(
+            Arrays.asList(
+                OWNER_FIELD_NAME, TYPE_FIELD_NAME, TYPE_URN_FIELD_NAME, ATTRIBUTION_SOURCE)));
   }
 }
